# maypyl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: unit_tests.yaml
src/maypyl/: __init__.py  _math.py  _statistics.py  _types.py
src/maypyl/plt/: __init__.py  _images.py  _util.py
tests/: test_math.py  test_statistics.py
tests/plt/: test_util.py
