[project]
name = "maypyl"
version = "0.1.0"
description = "Utility library for astrophysics and data science"
readme = "README.md"
authors = [
    { name = "Milan Staffehl", email = "milan-staffehl@gmx.de" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
]


# tools
[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C901", "RUF100", "RUF101", "RUF102", "RUF200"]

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
python_version = "3.13"
strict = true

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version_provider = "uv"
version_files = ["pyproject.toml:version", "src/maypyl/__init__.py:__version__"]
major_version_zero = true

[tool.isort]
src_paths = ["src/maypyl", "tests"]
known_first_party = ["maypyl"]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
